# nwebmedia

./: CMakeLists.txt
nbackend/: CMakeLists.txt  NBackend.h  NBackendApplication.cpp  NBackendApplication.h  NEntryPoint.cpp
nbackend/resources/: database.xml  service.xml  serviceFactory.xml
nmodel/: CMakeLists.txt  INConnection.cpp  INConnection.h  INModel.cpp  INModel.h  INModelAccess.cpp  INModelAccess.h  INModelColumn.cpp  INModelColumn.h  INParameter.cpp  INParameter.h  INPreparedStatement.cpp  INPreparedStatement.h  INResultSet.cpp  INResultSet.h  INStatement.cpp  INStatement.h  INTransaction.cpp  INTransaction.h  INTypedResultSet.cpp  INTypedResultSet.h  INValidTimeModel.cpp  INValidTimeModel.h  NModelColumn.cpp  NModelColumn.h  NParameter.cpp  NParameter.h  NResultType.h  NSqlBuilder.cpp  NSqlBuilder.h  NTransactionPool.cpp  NTransactionPool.h  NTypedResultSet.cpp  NTypedResultSet.h
nmodel/config/: NConnectionConfig.cpp  NConnectionConfig.h  NConnectionConfigCache.cpp  NConnectionConfigCache.h  NConnectionConfigFile.cpp  NConnectionConfigFile.h
nmodel/enumeration/: NConnectionType.cpp  NConnectionType.h
nmodel_postgresql/: CMakeLists.txt  NModelPostgeSqlEntryPoint.cpp  NModelPostgreSql.h  NPostgreSqlConnection.cpp  NPostgreSqlConnection.h  NPostgreSqlPreparedStatement.cpp  NPostgreSqlPreparedStatement.h  NPostgreSqlResultSet.cpp  NPostgreSqlResultSet.h
nservice/: CMakeLists.txt  IINService.cpp  IINService.h  IINServiceFactory.cpp  IINServiceFactory.h  INService.cpp  INService.h  INServiceApplication.cpp  INServiceApplication.h  INServiceFactory.cpp  INServiceFactory.h  NService.h  NServiceDefines.h  NServiceProvider.cpp  NServiceProvider.h
nservice/config/: NServiceConfig.cpp  NServiceConfig.h  NServiceConfigCache.cpp  NServiceConfigCache.h  NServiceConfigFile.cpp  NServiceConfigFile.h  NServiceFactoryConfig.cpp  NServiceFactoryConfig.h  NServiceFactoryConfigCache.cpp  NServiceFactoryConfigCache.h  NServiceFactoryConfigFile.cpp  NServiceFactoryConfigFile.h
nservice/exchange/: CMakeLists.txt  IINServiceRequest.cpp  IINServiceRequest.h  IINServiceResponse.cpp  IINServiceResponse.h  INServiceExchange.cpp  INServiceExchange.h  INServiceRequest.cpp  INServiceRequest.h  INServiceResponse.cpp  INServiceResponse.h  NServiceContext.cpp  NServiceContext.h  NServiceControl.cpp  NServiceControl.h  NServiceError.cpp  NServiceError.h  NServiceRequestHead.cpp  NServiceRequestHead.h  NServiceResponseHead.cpp  NServiceResponseHead.h
nservice/network/: NServiceConnectionTcp.cpp  NServiceConnectionTcp.h  NServiceConnectionUdp.cpp  NServiceConnectionUdp.h  NServiceServerSocketTcp.cpp  NServiceServerSocketTcp.h  NServiceServerSocketUdp.cpp  NServiceServerSocketUdp.h
nserviceclient/: CMakeLists.txt  IIINServiceClient.h  IINServiceClient.cpp  IINServiceClient.h  INServiceClient.cpp  INServiceClient.h  INServiceClientApplication.cpp  INServiceClientApplication.h  INServiceClientFactory.cpp  INServiceClientFactory.h  NServiceClientDefines.h  NServiceClientProvider.cpp  NServiceClientProvider.h
nserviceclient/config/: NServiceClientConfig.cpp  NServiceClientConfig.h  NServiceClientConfigCache.cpp  NServiceClientConfigCache.h  NServiceClientConfigFile.cpp  NServiceClientConfigFile.h  NServiceClientFactoryConfig.cpp  NServiceClientFactoryConfig.h  NServiceClientFactoryConfigCache.cpp  NServiceClientFactoryConfigCache.h  NServiceClientFactoryConfigFile.cpp  NServiceClientFactoryConfigFile.h
nserviceclientinfra/: CMakeLists.txt  INServiceClientKeyProvider.h  INServiceClientLocalisation.h  NServiceClientInfra.h  NServiceClientInfraEntryPoint.cpp  NServiceClientInfraFactory.cpp  NServiceClientInfraFactory.h  NServiceClientKeyProvider.cpp  NServiceClientKeyProvider.h  NServiceClientLocalisation.cpp  NServiceClientLocalisation.h
nserviceclientsecurity/: CMakeLists.txt  INServiceClientUser.h  NServiceClientSecurity.h  NServiceClientSecurityEntryPoint.cpp  NServiceClientSecurityFactory.cpp  NServiceClientSecurityFactory.h  NServiceClientUser.cpp  NServiceClientUser.h
nserviceinfra/: CMakeLists.txt  NServiceInfra.h  NServiceInfraEntryPoint.cpp  NServiceInfraFactory.cpp  NServiceInfraFactory.h  NServiceKeyProvider.cpp  NServiceKeyProvider.h  NServiceLocalisation.cpp  NServiceLocalisation.h
nserviceinfra/exchange/: CMakeLists.txt  NKeyProviderKey.cpp  NKeyProviderKey.h  NKeyProviderKeyReference.cpp  NKeyProviderKeyReference.h  NKeyProviderRequest.cpp  NKeyProviderRequest.h  NKeyProviderResponse.cpp  NKeyProviderResponse.h  NLocalisationEntry.cpp  NLocalisationEntry.h  NLocalisationKey.cpp  NLocalisationKey.h  NLocalisationList.cpp  NLocalisationList.h  NLocalisationPortion.cpp  NLocalisationPortion.h  NLocalisationRequest.cpp  NLocalisationRequest.h  NLocalisationResponse.cpp  NLocalisationResponse.h  NLocalisationValue.cpp  NLocalisationValue.h  NLocalizeRequest.cpp  NLocalizeRequest.h  NLocalizeResponse.cpp  NLocalizeResponse.h  NServiceKeyProviderExchange.h  NServiceLocalisationExchange.cpp  NServiceLocalisationExchange.h
nserviceinfra/model/: NInfKeysModel.cpp  NInfKeysModel.h  NInfKeysModelAccess.cpp  NInfKeysModelAccess.h  NInfLocalisationModel.cpp  NInfLocalisationModel.h  NInfLocalisationModelAccess.cpp  NInfLocalisationModelAccess.h
nservicesecurity/: CMakeLists.txt  NServiceSecurity.h  NServiceSecurityEntryPoint.cpp  NServiceSecurityFactory.cpp  NServiceSecurityFactory.h  NServiceUser.cpp  NServiceUser.h
nservicesecurity/exchange/: CMakeLists.txt  NChangeUserRequest.cpp  NChangeUserRequest.h  NChangeUserResponse.cpp  NChangeUserResponse.h  NCheckLoginCredentialsRequest.cpp  NCheckLoginCredentialsRequest.h  NUserData.h  (+21 more)
nwebfrontend/: CMakeLists.txt  NEntryPoint.cpp  NSession.cpp  NSession.h  NWebFrontend.h  NWebFrontendApplication.cpp  NWebFrontendApplication.h
nwebsecurity/: CMakeLists.txt  NSecViewLogin.cpp  NSecViewLogin.h  NSecViewRegister.cpp  NSecViewRegister.h  NUserAdministrationView.cpp  NUserAdministrationView.h  NViewSecurityFactory.cpp  NViewSecurityFactory.h  NWebSecurity.h  NWebSecurityEntryPoint.cpp  NWidgetSecurityFactory.cpp  NWidgetSecurityFactory.h
(+192 files in other folders)
