add_library(NServiceSecurityExchange SHARED NServiceUserExchange.cpp NServiceUserExchange.h NLoginCredentials.cpp NLoginCredentials.h NCheckLoginCredentialsRequest.cpp NCheckLoginCredentialsRequest.h NLoginCredentialsOk.cpp NLoginCredentialsOk.h NCheckLoginCredentialsResponse.cpp NCheckLoginCredentialsResponse.h NUserData.cpp NUserData.h NCreateUserRequest.cpp NCreateUserRequest.h NCreateUserResponse.cpp NCreateUserResponse.h NChangeUserRequest.cpp NChangeUserRequest.h NChangeUserResponse.cpp NChangeUserResponse.h NReadUserByNameParam.cpp NReadUserByNameParam.h NUserDataList.cpp NUserDataList.h NReadUserByNameRequest.cpp NReadUserByNameRequest.h NReadUserByNameResponse.cpp NReadUserByNameResponse.h)

target_link_libraries(NServiceSecurityExchange PUBLIC NServiceExchange NBase)